--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,11 @@
         "xlocnum": "cpp",
         "xloctime": "cpp",
         "xmemory": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "bitset": "cpp",
+        "set": "cpp",
+        "xmemory0": "cpp",
+        "xstddef": "cpp",
+        "xtree": "cpp"
     }
 }
